--- a/templates/name.html
+++ b/templates/name.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
-<body>
+<body style="background-color:lightyellow;">
+      
     <header>
         <h1>CNCFMinutes Argo CD</h1>
         <p>
