--- a/templates/name.html
+++ b/templates/name.html
@@ -9,7 +9,7 @@
 <body style="background-color:lightyellow;">
       
     <header>
-        <h1>CNCFMinutes Argo CD</h1>
+        <h1>CNCFMinutes Knative</h1>
         <p>
             Which is the best cloud native Youtube channel?
         </p>
