--- a/templates/name.html
+++ b/templates/name.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
-<body style="background-color:lightyellow;">
+<body>
       
     <header>
         <h1>CNCFMinutes Knative</h1>
