--- a/templates/name.html
+++ b/templates/name.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to CNCFMinutes</title>
+    <title>Cool Cool Coolify</title>
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
 <body>
       
     <header>
-        <h1>CNCFMinutes Knative</h1>
+        <h1>Coolify is cool</h1>
         <p>
             Which is the best cloud native Youtube channel?
         </p>
