--- a/templates/name.html
+++ b/templates/name.html
@@ -2,16 +2,16 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cool Cool Coolify</title>
+    <title>KCD Chennai</title>
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
-<body>
+<body style="background-color: #0bdd5d">
       
     <header>
-        <h1>Coolify is cool</h1>
+        <h1>Welcome to KCD Chennai</h1>
         <p>
-            Which is the best cloud native Youtube channel?
+            Which is the best cloud native community?
         </p>
     </header>
     <main>
@@ -22,7 +22,7 @@
             </form>
         
         <br>
-        <p><center>Powered by <b>Saiyam Pathak</b> </center></p>
     </main>
-
+<p style="font-family: 'Poppins', sans-serif; font-weight: bold; line-height: 2rem; font-size:1.3rem; color: white; text-align: center; padding: 15px; background-color: #1B2731">Website : kubesimplify.com<br>Twitter : @kubesimplify<br>Sponsor : kubesimplify.com/sponsor<br>Founder : Saiyam Pathak
+</p>
 </body>
