--- a/templates/name.html
+++ b/templates/name.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
-<body style="background-color: #0bdd5d">
+<body style="background-color: red">
       
     <header>
         <h1>Welcome to KCD Chennai</h1>
