--- a/templates/name.html
+++ b/templates/name.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>KCD Chennai</title>
+    <title>KCD Africa</title>
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
 <body style="background-color: red">
       
     <header>
-        <h1>Welcome to KCD Chennai</h1>
+        <h1>Welcome to KCD Africa</h1>
         <p>
             Which is the best cloud native community?
         </p>
