--- a/templates/name.html
+++ b/templates/name.html
@@ -2,16 +2,16 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>KCD Africa</title>
+    <title>Kubesimplify workshops</title>
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
 <body style="background-color: red">
       
     <header>
-        <h1>Welcome to KCD Africa</h1>
+        <h1>Welcome to Kubernetes Workshop</h1>
         <p>
-            Which is the best cloud native community?
+            Where to subscribe to regular updates?
         </p>
     </header>
     <main>
