--- a/templates/name.html
+++ b/templates/name.html
@@ -2,16 +2,16 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kubesimplify workshops</title>
+    <title>Hello Kubecon Detroit</title>
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
-<body style="background-color: red">
+<body style="background-color: #0F273E">
       
     <header>
-        <h1>Welcome to Kubernetes Workshop</h1>
+        <h1>Welcome to Civo Virtual office hours</h1>
         <p>
-            Where to subscribe to regular updates?
+            What is the best managed Kubernetes service provider?
         </p>
     </header>
     <main>
@@ -23,6 +23,6 @@
         
         <br>
     </main>
-<p style="font-family: 'Poppins', sans-serif; font-weight: bold; line-height: 2rem; font-size:1.3rem; color: white; text-align: center; padding: 15px; background-color: #1B2731">Website : kubesimplify.com<br>Twitter : @kubesimplify<br>Sponsor : kubesimplify.com/sponsor<br>Founder : Saiyam Pathak
+<p style="font-family: 'Poppins', sans-serif; font-weight: bold; line-height: 2rem; font-size:1.3rem; color: white; text-align: center; padding: 15px; background-color: #1B2731">Website : civo.com<br>Twitter : @civocloud<br>Navigate : civo.com/navigate<br>I am : Saiyam Pathak
 </p>
 </body>
