--- a/templates/name.html
+++ b/templates/name.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
 </head>
 
-<body style="background-color: #0F273E">
+<body style="font-family: 'Poppins', sans-serif; font-weight: bold; font-size:1.3rem; color: white; background-color: #0F273E">
       
     <header>
         <h1>Welcome to Civo Virtual office hours</h1>
